fix align input

--- a/src/components/atoms/input/Index.module.scss
+++ b/src/components/atoms/input/Index.module.scss
@@ -13,6 +13,7 @@ $color: #000;
   color: $color;
   font-size: $font-size;
   height: $input-height-small;
+  text-align: left;
   text-indent: $input-text-indent;
   width: $input-width;
 }
